 - GBA Audio: Fix 8-bit writes to audio channel 3 frequency
 - ARM7: ARMHotplugDetach should call deinit
 - Qt: Fix window being too tall after exiting fullscreen
 - Qt: Fix a missing va_end call in the log handler lambda within the GameController constructor
 - GBA Cheats: Fix Pro Action Replay and GameShark issues when used together
 - Qt: Fix analog buttons not getting unmapped
Misc:
 - Qt: Handle saving input settings better
 - Debugger: Free watchpoints in addition to breakpoints
 - Qt: Move GL frame drawing back onto its own thread
 - GBA: Add status log level
 - GBA Thread: Add functionality for running callbacks on the GBA thread
 - Qt: Fast forward (held) option moved from Other to Emulation menu
 - All: Add --help flag for command line programs
 - Qt: Show version info in window title
 - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
 - GBA SIO: Add a dummy driver for Normal mode
 - GBA: GBARewind now returns how many states it has rewound
 - All: Enable static linking for Windows
 - All: Enable static linking for OS X
 - Qt: Migrate multiplayer window handling into GBAApp
 - Qt: Unified file opening and saving with last location
 - Qt: Fix windows being resizable when they shouldn't have been
 - Qt: Only hide cursor in full screen
 - Perf: Ability to load savestates immediately on launch
 - Qt: Replace pause-after-frame mutex with an atomic
 - Util: Allow disabling the threading code entirely
 - GBA: SIO logging layer
 - Qt: Add application icon and XDG desktop files
 - GBA Thread: Split GBASync into a separate file
 - SDL: Properly check for initialization
 - SDL: Clean up initialization functions
 - All: Threads are now named
 - Qt: Rename "Fullscreen" to "Toggle fullscreen"
 - Qt: Don't save window size when entering fullscreen
 - Qt: Make the default fullscreen binding for Windows be Alt-Enter
 - GBA Video: Refactor software renderer into separate files
 - ARM7: Add emulation for Undefined CPU mode