@@ -40,7 +40,8 @@ enum {
 
 	REG_DISPSTAT_MASK = 0xFF38,
 
-	BASE_TILE = 0x00010000
+	BASE_TILE = 0x00010000,
+	BASE_TILE_BITMAP = 0x00014000
 };
 
 enum ObjMode {
